--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-modal-video": "^1.2.6",
@@ -22,7 +23,7 @@
     "react-scroll": "^1.8.1",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.8.0",
-    "swiper": "^6.4.8",
+    "swiper": "^6.8.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
