--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "bootstrap": "^4.5.3",
     "countdown": "^2.6.0",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
@@ -23,6 +22,8 @@
     "react-scroll": "^1.8.1",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.8.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "swiper": "^6.8.4",
     "web-vitals": "^0.2.4"
   },
