--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
+    "react-https-redirect": "^1.1.0",
     "react-modal-video": "^1.2.6",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
